# terminal-svg

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  deploy-site.yml  update-tap.yml
assets/: editor.html
assets/fonts/: OFL.txt
docs/: README.md  architecture.md  demo.cast  install.md  themes.md  usage.md
docs/assets/: logo.cast
docs/releases/: v0.6.0.md
examples/: gallery.sh  make-demo-cast.py
scripts/: README.md  gallery.sh  make-demo-cast.py  make-fixtures.sh  make-logo-cast.py
site/: astro.config.mjs  package.json  pnpm-lock.yaml
site/public/: CNAME
site/src/components/: Chrome.astro  Cmd.astro  CodeSnippet.astro  DocsSearch.astro  FinishPicker.astro  Footer.astro  GalleryGrid.astro  Nav.astro  ReleaseEntry.astro  Shot.astro  StatusBar.astro  ThemeChip.astro
site/src/lib/: docs.ts  (+2 more)
src/: anim.rs  cast.rs  cli.rs  config.rs  edit.rs  editor.rs  embed.rs  lib.rs  main.rs  options.rs  pipeline.rs
src/capture/: input.rs  mod.rs  pty.rs  record.rs
src/font/: assets.rs  mod.rs  subset.rs
src/render/: anim.rs  chrome.rs  metrics.rs  mod.rs  svg.rs  text.rs
src/term/: mod.rs  screen.rs
src/theme/: builtin.rs  mod.rs
tests/: golden.rs  pty.rs  roundtrip.rs
tests/fixtures/: boxdrawing.ansi  cjk-emoji.ansi  colors16.ansi  colors256.ansi  progress.ansi  sgr-styles.ansi  starship.ansi  truecolor.ansi  typing-v3.cast  typing.cast
themes/: catppuccin-mocha.toml  dracula.toml  github-dark.toml  github-light.toml  nord.toml  powershell.toml  solarized-dark.toml  tokyo-night.toml  ubuntu.toml
(+8 files in other folders)
